# hft_rtb

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.test.yml  docker-compose.yml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/control_plane/: Cargo.toml  build.rs
crates/control_plane/proto/: control.proto
crates/control_plane/src/: lib.rs
crates/decoder/: Cargo.toml
crates/decoder/src/: lib.rs
crates/engine_core/: Cargo.toml
crates/engine_core/benches/: latency.rs
crates/engine_core/src/: lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs
crates/order_router/: Cargo.toml
crates/order_router/src/: lib.rs
deploy/docker/: engine.Dockerfile  loadgen.Dockerfile
deploy/monitoring/: prometheus.yml
deploy/monitoring/grafana/dashboards/: dashboard.yml
deploy/monitoring/grafana/datasources/: prometheus.yml
deploy/systemd/: engine.service
scripts/: setup.sh  test.sh
services/engine/: Cargo.toml
services/engine/src/: main.rs
tests/integration/: Cargo.toml  README.md  run_tests.sh  test_runner.py
tests/integration/config/: test_config.yaml
tests/integration/data/: sample_market_data.json  sample_orders.json
tests/integration/python/: conftest.py  requirements.txt  test_api.py  test_health.py  test_kafka.py  test_performance.py
tests/integration/src/: main.rs  utils.rs
tests/integration/src/tests/: grpc.rs  health.rs  kafka.rs  latency.rs  load.rs  metrics.rs  mod.rs
tools/loadgen/: Cargo.toml
tools/loadgen/src/: main.rs
