[workspace]
members = [
    "crates/common",
    "crates/decoder",
    "crates/gateway",
    "crates/engine_core",
    "crates/order_router",
    "crates/control_plane",
    "tools/loadgen",
    "services/engine",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Factory Droid <factory@example.com>"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
bytes = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
bincode = { version = "1", default-features = false, features = ["alloc"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.14"
tokio-stream = "0.1"
rdkafka = { version = "0.36", optional = true, features = ["tokio"] }
arc-swap = "1"
crossbeam = { version = "0.8", features = ["crossbeam-channel", "alloc"] }
parking_lot = "0.12"
tower = { version = "0.4", features = ["util", "timeout", "buffer"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
rand = "0.8"
criterion = { version = "0.5", features = ["async_tokio"] }
bytesize = "1"
bumpalo = "3"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
thiserror = "1"
tokio-uring = { version = "0.4", optional = true }
core_affinity = "0.8"
tokio-metrics = "0.7"

[features]
default = []
with-kafka = ["rdkafka"]
with-uring = ["tokio-uring"]
