[package]
name = "decoder"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
bumpalo.workspace = true
common = { path = "../common" }
serde.workspace = true
serde_bytes.workspace = true
bincode.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
