[package]
name = "engine_core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
common = { path = "../common" }
crossbeam.workspace = true
parking_lot.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-metrics.workspace = true
tokio-util.workspace = true
metrics.workspace = true
tracing.workspace = true
rand.workspace = true
futures.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
once_cell.workspace = true
core_affinity.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "latency"
harness = false
