[package]
name = "order_router"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tower.workspace = true
common = { path = "../common" }
tracing.workspace = true
metrics.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
