[package]
name = "hft-integration-tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "integration_tests"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
tonic = "0.10"
prost = "0.12"
futures = "0.3"
bytes = "1.0"
bincode = "1.3"
redis = { version = "0.24", features = ["tokio-comp"] }
prometheus-parse = "0.2"

# Local dependencies
common = { path = "../../crates/common" }
control_plane = { path = "../../crates/control_plane" }

[dev-dependencies]
criterion = "0.5"